--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
+    <title>SysTask - Sistema Gerenciador de Tarefas</title>
+    <link rel="stylesheet" href="frontend/assets/css/login.css">
+    <link rel="stylesheet" href="frontend/vendor/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="frontend/vendor/sweetAlert/dist/sweetalert2.css">
+ </head>
 <body>
-    
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-12 div col-sm-8 col-md-2">
+                <div class-="card shadow">
+                    <div class="card-header bg-info">
+                        <h4 class="text-center text-white">
+                            Login SysTask
+                            </h4>
+                    </div>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" name="EMAIL" id="EMAIL" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="senha">Senha</label>
+                                <input type="password" name="PASSWORD" id="PASSWORD" class="from-control">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="card-footer bg-info">
+                        <button class="btn btn-white btn-block btn-lg">Entrar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
