--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
  </head>
 <body>
     <div class="container-fluid">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center center-login bg-login">
             <div class="col-12 div col-sm-8 col-md-2">
-                <div class-="card shadow">
-                    <div class="card-header bg-info">
-                        <h4 class="text-center text-white">
+                <div class-="card shadow-lg bg-white border-0">
+                    <div class="card-header">
+                        <h4 class="text-center text-dark">
                             Login SysTask
                             </h4>
                     </div>
@@ -27,12 +27,12 @@
                             </div>
                             <div class="form-group">
                                 <label for="senha">Senha</label>
-                                <input type="password" name="PASSWORD" id="PASSWORD" class="from-control">
+                                <input type="password" name="PASSWORD" id="PASSWORD" class="form-control">
                             </div>
                         </form>
                     </div>
-                    <div class="card-footer bg-info">
-                        <button class="btn btn-white btn-block btn-lg">Entrar</button>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-info btn-block btn-lg">Entrar</button>
                     </div>
                 </div>
             </div>
